# tn19n.github.io

./: .gitignore  .prototools  Cargo.toml  Dioxus.toml  moon.yml  tailwind.css
.github/workflows/: cd.yml
.moon/: toolchain.yml
.zed/: settings.json  tasks.json
assets/: blogs.json  experiences.json  projects.json  tailwind.css
posts/: create_personal_portfolio.md
src/: app.rs  lib.rs  router.rs
src/common/: mod.rs
src/common/components/: badge.rs  button.rs  footer.rs  mod.rs  nav_bar.rs  post_card.rs  theme_toggle.rs
src/common/components/card/: content.rs  description.rs  header.rs  mod.rs  title.rs
src/common/icons/: arrow_left.rs  calendar.rs  house.rs  mod.rs  monitor.rs  moon.rs  sun.rs
src/common/layout/: app.rs  mod.rs  nav_bar.rs
src/common/model/: experiences.rs  mod.rs  posts.rs  posts_metadata.rs  projects.rs
src/common/pages/: mod.rs  page_not_found_or_error.rs
src/common/providers/: theme.rs
src/features/: mod.rs
src/features/blog/: mod.rs
src/features/blog/pages/: blog.rs  mod.rs  post.rs
src/features/home/: mod.rs  page.rs
src/features/home/components/: blog.rs  contact.rs  experience_card.rs  experiences.rs  hero.rs  mod.rs  project_card.rs  projects.rs
