[package]
name = "portfolio"
version = "0.1.0"
authors = ["Mustapha <mostafaanawawi@gmail.com>"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
comrak = "0.42.0"
css-color = "0.2.8"
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
dioxus-sdk = { git = "https://github.com/ealmloff/dioxus-std", branch = "0.7", features = ["storage", "window"]  }
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.226"
serde_json = "1.0.145"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
web-sys = { version = "0.3.80", features = ["Window", "Document", "Element", "Event", "EventTarget"] }

[features]
default = ["web"]
web = ["dioxus/web"]

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[build]
rustflags = [
    "-Clto",
    "-Zvirtual-function-elimination",
    "-Zlocation-detail=none"
]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
